# healthnavigator-fyp

./: .env.example  .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .env.example  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 5ef7325508ab_fix_datetime_issue.py  7f89b5044206_add_session_title.py  87c8d9657e6d_add_documents_table.py  9ec2223dd4c6_initial_database_creation.py  ab5b74bea47b_add_health_profile.py  d4750b9e7df8_fix_session_timestamp.py  e7cef40b95f7_add_database_index_and_missing_attribute.py  ec2e22496132_add_exercise_tracker.py  eef4fdf77d97_change_user_schema.py  fab5b5f39e7d_convert_ids_to_use_uuids.py
backend/app/: main.py
backend/app/api/: dependencies.py
backend/app/api/routes/: admin.py  auth.py  chat.py  exercise.py  graph.py  sessions.py  users.py
backend/app/core/: config.py  validators.py
backend/app/db/: neo4j_client.py  postgres_client.py  qdrant_client.py
backend/app/models/: schema.py
backend/app/services/: ml_models.py
backend/app/services/crew/: agents.py  tools.py
backend/app/services/ingestion/: deleter.py  embedder.py  parser.py  pipeline.py  uploader.py
backend/app/services/rag/: chain.py  retrievers.py
backend/eval_results/: hybrid_scorecard.csv  vector_only_scorecard.csv
backend/scripts/: backfill_documents.py  generate_synthetic_data.py  run_evaluation.py
frontend/: package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx
frontend/app/(auth)/: layout.tsx
frontend/app/admin/: page.tsx
frontend/app/chat/: page.tsx
frontend/app/exercise/: page.tsx
frontend/app/history/: page.tsx
frontend/app/login/: page.tsx
frontend/components/: HealthProfileDialog.tsx  Sidebar.tsx  providers.tsx
frontend/hooks/: useAdmin.ts  useAuth.ts  useDocuments.ts  useExercise.ts  useGraph.ts  useIngestPipeline.ts  useSessions.ts
frontend/lib/: api.ts  chatTurn.ts  errors.ts  format.ts  healthProfile.ts  rehypeFadeWords.ts  streamChat.ts  wordStreamer.ts
frontend/store/: authStore.ts
frontend/types/: chat.ts
(+39 files in other folders)
