[project]
name = "healthnavigator-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt==4.0.1",
    "langchain-huggingface>=1.2.1",
    "litellm>=1.83.0",
    "openpyxl>=3.1.5",
    "passlib[bcrypt]>=1.7.4",
    "pdf2image>=1.17.0",
    "pdfminer-six>=20260107",
    "pyjwt>=2.12.1",
    "sentence-transformers>=5.3.0",
    "torch>=2.11.0",
    "transformers>=5.4.0",
    "unstructured>=0.22.6",
    "unstructured-inference>=1.5.3",
    "xmltodict>=1.0.4",
]
