[project]
name = "healthnavigator-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "bcrypt==4.0.1",
  "datasets>=4.8.4",
  "pandas>=2.2.0",
  "gliner>=0.2.24",
  "langchain>=1.2.15",
  "langchain-huggingface>=1.2.1",
  "langchain-text-splitters>=1.1.1",
  "litellm>=1.83.0",
  "openpyxl>=3.1.5",
  "passlib[bcrypt]>=1.7.4",
  "pdf2image>=1.17.0",
  "pdfminer-six>=20260107",
  "pyjwt>=2.12.1",
  "ragas>=0.4.3",
  "sentence-transformers>=5.3.0",
  "slowapi>=0.1.9",
  "transformers>=5.4.0",
  "unstructured[pdf]>=0.22.6",
  "unstructured-inference>=1.5.3",
  "xmltodict>=1.0.4",
  "pi-heif>=1.3.0",
  "pymupdf>=1.27.2.2",
  "langchain-community>=0.4.1",
  "langchain-ollama>=1.1.0",
  "alembic>=1.18.4",
  "fastapi>=0.136.0",
  "fastapi-cli>=0.0.24",
  "neo4j>=6.1.0",
  "asyncpg>=0.31.0",
  "backoff>=2.2.1",
  "build>=1.4.3",
  "dnspython>=2.8.0",
  "durationpy>=0.10",
  "email-validator>=2.3.0",
  "google-genai>=1.73.1",
  "groq>=0.37.1",
  "h2>=4.3.0",
  "hpack>=4.1.0",
  "httptools>=0.7.1",
  "hyperframe>=6.1.0",
  "fastapi-cloud-cli>=0.17.0",
  "fastar>=0.11.0",
  "importlib-resources>=7.1.0",
  "kubernetes>=35.0.0",
  "langchain-groq>=1.1.2",
  "qdrant-client>=1.17.1",
  "openai>=2.30.0",
]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["alembic*"]
